--- a/itcase_sphinx_theme/itcase/static/css/page.css
+++ b/itcase_sphinx_theme/itcase/static/css/page.css
@@ -9,6 +9,7 @@
     top: 0;
     left: 0;
     background: #eeeeee;
+    visibility: hidden;
   }
   .page__left_state_collapse
   {
@@ -17,12 +18,14 @@
 
   .page__right
   {
-    margin: 0 0 0 330px;
+     margin: 0 0 0 330px;
+     visibility: hidden;
   }
   .page__right_state_expand
   {
     margin: 0 0 0 40px;
   }
+
 .page_type_main-page .page__left
 {
   display: none;
